Fix report mapping (#33)
* Fixed SplitUnit mapping

* Temp

* Fix report mapping

* Remove redundant keycloak auth

* Tests cleanup

* Bump deps